--- a/package.json
+++ b/package.json
@@ -16,14 +16,11 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "cookies-next": "^4.3.0",
-    "framer-motion": "^11.11.7",
     "gsap": "^3.12.5",
     "next": "14.2.15",
-    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "swiper": "^11.1.14"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -31,8 +28,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
